# BattleIA

./: .gitignore  BattleIA.slnx  BattleIA.vcxproj  BattleIA.vcxproj.filters  CMakeLists.txt  Makefile  README.md
.github/workflows/: release.yml
src/: DiagnoseEntity.cpp  Main.cpp
src/Config/: Constants.h  RenderConfig.h
src/Core/: GameLoop.cpp  GameLoop.h
src/Core/GameStates/: EndScreenState.cpp  EndScreenState.h  GameStateManager.cpp  GameStateManager.h  PlayingState.cpp  PlayingState.h
src/Entities/: EntityComponents.h
src/Managers/: CameraManager.cpp  CameraManager.h  EntityManager.cpp
src/Rendering/: EffectsRenderer.cpp  EffectsRenderer.h  FuturisticEffects.h  MapRenderer.cpp  MapRenderer.h  Renderer.cpp  Renderer.h  UIRenderer.cpp  UIRenderer.h
src/Systems/: CombatSystem.h  EloSystem.h  LootSystem.h  MovementSystem.cpp  MovementSystem.h
src/UI/: EndScreen.cpp  EndScreen.h  HUD.cpp  HUD.h  Sidebar.cpp  UIManager.cpp  UIManager.h
src/UI/Widgets/: EntityCard.cpp  EntityCard.h  ScrollableList.cpp  ScrollableList.h  StatsPanel.cpp  StatsPanel.h
src/Utils/: CollisionUtils.cpp  CollisionUtils.h  Logger.cpp  Logger.h  MathUtils.cpp  RandomUtils.cpp
src/World/: Zone.cpp  Zone.h
